syntax = "proto3";

option go_package = "github.com/zerops-io/zcli/src/zeropsDaemonProtocol";

package zeropsDaemonProtocol;

service ZeropsDaemonProtocol {
    rpc startVpn (startVpnRequest) returns (startVpnResponse);
    rpc stopVpn (stopVpnRequest) returns (stopVpnResponse);
    rpc statusVpn (statusVpnRequest) returns (statusVpnResponse);
}

message error {
    errorCode code = 1;
    string message = 2;
}

enum errorCode {
    NO_ERROR = 0;
    INTERNAL_SERVER_ERROR = 1;
}

message startVpnRequest {
    string apiAddress = 1;
    string vpnAddress = 2;
    string projectId = 3;
    string token = 4;
}

message startVpnResponse {
    error error = 1;
}

message stopVpnRequest {
}

message stopVpnResponse {
    error error = 1;
}

message statusVpnRequest {
}

enum vpnStatus {
    INACTIVE = 0;
    ACTIVE = 1;
}

message statusVpnResponse {
    vpnStatus status = 1;
    error error = 2;
}

